--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 500px;
+    width: 365px;
     height: 100vh;
-    margin-left: 385px;
+    padding: 15px;
+    margin: auto;
 }
 
 img{
